# DlibLearn

./: CMakeLists.txt  README.md  dlibPropertySheet.props
AssignmentLearn/: AssignmentLearn.cpp  AssignmentLearn.sln
AssignmentLearn/AssignmentLearn/: AssignmentLearn.cpp  AssignmentLearn.vcxproj  AssignmentLearn.vcxproj.filters  ReadMe.txt  stdafx.cpp
DeepAdvanced/: DeepAdvanced.cpp  DeepAdvanced.sln
DeepAdvanced/DeepAdvanced/: DeepAdvanced.cpp  DeepAdvanced.vcxproj  DeepAdvanced.vcxproj.filters  ReadMe.txt  stdafx.cpp
DeepBasic/: DeepBasic.sln
DeepBasic/DeepBasic/: DeepBasic.cpp  DeepBasic.vcxproj  DeepBasic.vcxproj.filters  ReadMe.txt  stdafx.cpp
MatrixBasic/: MatrixBasic.sln
MatrixBasic/MatrixBasic/: MatrixBasic.cpp  MatrixBasic.vcxproj  MatrixBasic.vcxproj.filters  ReadMe.txt  stdafx.cpp
PtCloud/: PtCloud.sln  ptCloud.cpp
PtCloud/PtCloud/: PtCloud.cpp  PtCloud.vcxproj  PtCloud.vcxproj.filters  ReadMe.txt  stdafx.cpp
data/: README.txt
src/DeepAdvanced/: DeepAdvanced.cpp
src/DeepBasic/: DeepBasic.cpp
src/MaxMarginObjectDetection/: maxMargin.cpp
src/NotUsed/: NonlinearLeastSquareDemo.cpp  OptimizationTest.cpp  README.txt
src/VehicleDetector/: vehicleDetection.cpp
src/VehicleFrontBackDetector/: README.txt  vehicleFrontBackDetector.cpp
template/: CMakeLists.txt
